--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "20.14.2",
+    "globals": "^15.4.0",
     "eslint": "^9.4.0"
   },
   "files": [
