fix(#111): The local project does not define a packageManager field

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-  
+
+    - name: Enable experimental corepack api for yarn
+      run: corepack enable
+
     - name: Install dependencies
       run: yarn install
 
