fix(#110): Drop support for node 18

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   "homepage": "https://github.com/doug-wade/eleventy-plugin-local-ai",
   "repository": {
     "url": "git+https://github.com/doug-wade/eleventy-plugin-local-ai.git"
+  },
+  "engines": {
+    "node": ">= 20.0.0"
   }
 }
