--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "undici": "^7.2.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1",
     "@types/node": "22.10.5",
     "eslint": "^9.4.0",
     "globals": "^15.4.0"
